# gravwell

./: .gitignore  LICENSE  README.md  pyproject.toml
gravwell/: __main__.py  auth.py  config.py  database.py  keystore.py  projects.py
gravwell/cli/: commands.py
gravwell/discovery/: __init__.py  arp.py  passive.py  ping.py  runner.py  snmp.py  tcp.py  udp.py
gravwell/graph/: analysis.py  builder.py
gravwell/models/: dataclasses.py  enrichment.py  ingestion.py  orm.py  os_inference.py
gravwell/parsers/: base.py  cisco.py  crowdstrike.py  enum4linux.py  fortinet.py  juniper.py  masscan.py  nessus.py  nmap.py  nuclei.py  openvas.py  paloalto.py  registry.py
gravwell/ui/: app.py  layout.py  styles.py
gravwell/ui/callbacks/: add_node_callbacks.py  browse_callbacks.py  config_callbacks.py  discovery_callbacks.py  edge_callbacks.py  edit_callbacks.py  enrich_callbacks.py  export_callbacks.py  filter_callbacks.py  graph_callbacks.py  import_callbacks.py  path_callbacks.py  project_callbacks.py  settings_callbacks.py  subnet_callbacks.py
gravwell/ui/components/: bottom_tabs.py  detail_panel.py  graph_panel.py  sidebar.py
tests/: test_analysis.py  test_ingestion.py  test_parsers.py
tests/fixtures/: sample.nessus  sample_cisco.txt  sample_enum4linux.txt  sample_enum4linux_ng.json  sample_masscan.json  sample_nmap.xml  sample_nuclei.jsonl
